# PUE_GruppeA_Ida

./: .gitignore  .pdm-python  README.md  main.py  main_hr_app.py  main_leistungskurve2.py  pyproject.toml
src/: analyze_hr_data1.py  analyze_hr_data_functions.py  find_peaks.py  find_peaks_EKG.py  functions_Leistungskurve2.py  load_data.py  load_user_data.py  power_curve.py  sort.py
