[project]
name = "PUE_GruppeA_Ida"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "id-dp", email = "i.duerr-pucher@mci4me.at"},
]
dependencies = ["numpy>=2.2.5", "matplotlib>=3.10.3", "streamlit>=1.45.1", "ipykernel>=6.29.5", "plotly>=6.1.2", "nbformat>=5.10.4"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
